# ioreg-proc

./: Cargo.toml  thumbv7m-none-eabi-zinc.json
basic_sam3x/: Cargo.toml  build.rs  upload.sh
basic_sam3x/src/: device.x  isr.rs  main.rs  memory.x  peripheral_clock.rs  pin.rs  sam.rs  util.rs  watchdog.rs
ioreg-proc/: Cargo.toml
ioreg-proc/src/: lib.rs  util.rs
ioreg-proc/src/builder/: alignment.rs  casing.rs  mod.rs  union.rs
ioreg-proc/tests/: basic.rs  field_counts.rs  inverted.rs  read_only.rs
src/: builder.rs  lib.rs
test_sam3x/: Cargo.toml  build.sh
test_sam3x/src/: main.rs  util.rs
tests/: basic.rs
volatile_cell/: Cargo.toml
volatile_cell/src/: lib.rs
zinc/: Cargo.toml  blink_sam3x  blink_sam3x_inlined  build.rs  upload.sh
zinc-macro/: Cargo.toml
zinc-macro/src/: lib.rs
zinc/examples/: blink_sam3x.rs  empty.rs  turnoff_sam3x.rs
zinc/src/: abort.rs  lib.rs  panic.rs
zinc/src/hal/: layout_common.ld  mem_init.rs  mod.rs  pin.rs  stack.rs
zinc/src/hal/cortex_common/: irq.rs  mpu.rs  nvic.rs  scb.rs  systick.rs
zinc/src/hal/cortex_m3/: isr.rs  mod.rs
zinc/src/hal/sam3x/: iomem.ld  isr.rs  layout.ld  mod.rs  peripheral_clock.rs  pin.rs  scb.rs  system_clock.rs  watchdog.rs
zinc/src/util/: mod.rs
