[package]
name = "ioreg-proc"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin@qw-corp.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
heck = "0.3"

[dependencies.syn]
version = "0.15"
features = [ "full" ]

[dependencies.volatile_cell]
path = "../volatile_cell"

[features]
default = []
alignment_tests = []
x86_64_bmi1_optimization = []
