[package]
name = "test_sam3x"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.zinc]
path = "../zinc"
features = ["mcu_sam3x"]

[dependencies.zinc-macro]
path = "../zinc-macro"
